# cask

./: .gitignore  Makefile  README.md  go.mod  pyproject.toml
internal/cli/: add.go  devbox.go  diff.go  list.go  lock.go  remove.go  root.go  state.go  sync.go  update.go  validate.go  version.go
internal/config/: expansion.go  expansion_test.go  loader.go  loader_test.go  models.go  paths.go  paths_test.go  validation.go  validation_test.go  writer.go  writer_test.go
internal/containers/: containers_test.go  distrobox.go  podman.go  quadlet.go  rootless.go
internal/devbox/: hooks.go  hooks_test.go
internal/executor/: executor.go  executor_test.go  mock.go
internal/flatpak/: flatpak.go  flatpak_test.go  hardening.go  overrides.go
internal/state/: generations.go  generations_test.go  hashing.go  hashing_test.go  lockfile.go  lockfile_test.go  manager.go  manager_test.go  models.go
internal/sync/: algorithm.go  algorithm_test.go  containers.go  devbox.go  flatpak.go  protocol.go  tools.go
internal/tools/: mise.go  mise_test.go
src/cask/: __init__.py  __main__.py  result.py
tests/: test_executor.py  test_result.py
tests/fixtures/: config.toml  containers.toml  packages.toml
tests/test_cli/: test_validate.py  test_version.py
tests/test_config/: test_expansion.py  test_loader.py  test_models.py  test_validation.py
tests/test_devbox/: test_hooks.py
tests/test_managers/: test_distrobox.py  test_flatpak.py  test_mise.py  test_pacman.py  test_podman.py  test_quadlet.py
tests/test_state/: test_generations.py  test_hashing.py  test_lockfile.py  (+1 more)
(+45 files in other folders)
