[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cask"
version = "0.1.0"
description = "Declarative package and container management CLI"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "pydantic>=2.0",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
cask = "cask.cli.app:run"

[tool.hatch.build.targets.wheel]
packages = ["src/cask"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
